- Creation of Vector, an independant library for list indiced by their length.
  Vectors' names overwrite lists' one so you shouldn't "Import" the library.
  All old names change: functions' name become the CaML one and for example
  Vcons become Vector.cons. You can use notations by importing
  Vector.VectorNotations.
- Removal of TheoryList. Requiring List instead should work most of the time.
- New syntax "rew Heq in H" and "rew <- Heq in H" for eq_rect and eq_rect_r.

Internal infrastructure

- Opaque proofs are now loaded lazily by default. This allows to be almost as
  fast as -dont-load-proofs, while being safer (no creation of axioms) and
  avoiding feature restrictions (Print and Print Assumptions work ok).
- Experimental support added for camlp4 (the one provided alongside ocaml),
  simply pass option -usecamlp4 to ./configure. By default camlp5 is used.
- Revised build system: no more stages in Makefile thanks to some recursive
  aspect of recent gnu make, use of vo.itarget files containing .v to compile
  for both make and ocamlbuild, etc.
- Support of cross-compilation via mingw toward Windows, contact P. Letouzey
  for more informations.
- new Makefile rules mli-doc to make html of mli in dev/doc/html and
  full-stdlib to get a HUGE pdf with all the stdlib.

Extraction

- The pretty-printer for Haskell now produces layout-independant code
- A new command "Separate Extraction cst1 cst2 ..." that mixes a
  minimal extracted environment a la "Recursive Extraction" and the
  production of several files (one per coq source) a la "Extraction Library".
  DOC TODO.

Tools

- Coq now searches directories specified in COQPATH and user-contribs before
  the standard library.
- Coqide now runs coqtop as separated process, making it more robust:
  coqtop subprocess can be interrupted, or even killed and relaunched
  (cf button "Restart Coq", ex-"Go to Start"). For allowing such interrupts,
  the Windows version of coqide now requires Windows >= XP SP1.